[package]
name = "dotcat"
version = "1.1.0"
edition = "2024"
license = "MIT"
description = "A simple tool to manage dotfiles on linux"
repository = "https://github.com/Whiskers-Apps/dotcat"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
colorize = "0.1.0"
dirs = "6.0.0"
inquire = "0.7.5"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
toml = "0.9.5"
